# riocloud-reader

./: LICENSE  README.md  README_es.md  README_ja.md  README_ko.md  README_ru.md  README_zh.md  pyproject.toml
riocloud_reader/: __init__.py  cli.py  reader.py  schema.py
riocloud_reader.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
riocloud_reader/parsers/: __init__.py  base.py  bilibili.py  generic.py  reddit.py  rss.py  telegram.py  twitter.py  wechat.py  xhs.py  youtube.py
riocloud_reader/utils/: __init__.py  url_validator.py
skills/reader/: __init__.py  manifest.json
tests/: __init__.py  test_parsers.py  test_schema.py
