[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "riocloud-reader"
version = "1.1.0"
description = "Universal content reader - fetch from Twitter, Reddit, YouTube, WeChat, and more"
readme = "README.md"
license = {text = "BSD-2-Clause"}
authors = [
    {name = "Riocloud", email = "hi@riocloud.io"}
]
keywords = ["reader", "scraper", "twitter", "reddit", "youtube", "wechat", "xiaohongshu"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "requests>=2.28.0",
    "feedparser>=6.0.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=4.9.0",
    "loguru>=0.7.0",
]

[project.optional-dependencies]
all = [
    "playwright>=1.40.0",
    "trafilatura>=1.6.0",
    "youtube-transcript-api>=0.6.0",
    "telethon>=1.34.0",
    "notebooklm-py>=0.1.0",
]
browser = [
    "playwright>=1.40.0",
]
youtube = [
    "youtube-transcript-api>=0.6.0",
]
telegram = [
    "telethon>=1.34.0",
]
notebooklm = [
    "notebooklm-py>=0.1.0",
]
generic = [
    "trafilatura>=1.6.0",
]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[project.scripts]
riocloud-reader = "riocloud_reader.cli:main"

[project.urls]
Homepage = "https://github.com/Riocloud/riocloud-reader"
Repository = "https://github.com/Riocloud/riocloud-reader"
Issues = "https://github.com/Riocloud/riocloud-reader/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["riocloud_reader*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
